# kr_3d_active_ms_slam

./: .gitmodules  README.md
exploration_planner/planner/active_perception/: CMakeLists.txt  package.xml
exploration_planner/planner/active_perception/include/active_perception/: cop_utils.h  frontier_finder.h  graph_node.h  graph_search.h  heading_planner.h  perception_utils.h
exploration_planner/planner/active_perception/src/: cop_utils.cpp  frontier_finder.cpp  graph_node.cpp  heading_planner.cpp  perception_utils.cpp
exploration_planner/planner/cop_lib/: CMakeLists.txt  package.xml
exploration_planner/planner/cop_lib/include/cop_lib/: apsp_floyd_warshall.h  atsp_held_karp.h  constants.h  cop.h  graph.h  math_utils.h  mst_prim.h  typedefs.h  vec2d.h  vertex.h
exploration_planner/planner/cop_lib/src/: cop.cpp
exploration_planner/planner/exploration_manager/: CMakeLists.txt  README.md  package.xml
exploration_planner/planner/exploration_manager/config/: gazebo.rviz  gazebo_sloam.rviz  mapper.yaml  real_robot.rviz  sim.rviz
exploration_planner/planner/exploration_manager/include/exploration_manager/: expl_data.h  global_plan_server.h  ms_exploration_fsm.h  ms_exploration_manager.h
exploration_planner/planner/exploration_manager/launch/: algorithm.xml  exploration.launch  gazebo_sim.launch  global_plan_server.launch  real_robot.launch  real_robot_rviz.launch  rviz.launch  tmux_control.launch  tmux_exploration.launch  tmux_exploration_real_robot.launch  tmux_gazebo_sim.launch  tmux_real_robot_sloam_exploration.launch  tmux_sim_closure_submap.launch  tmux_sim_sloam_exploration.launch  tmux_spawn.launch
exploration_planner/planner/exploration_manager/scripts/: tmux_real_robot.sh  tmux_sim_slam.sh
exploration_planner/planner/exploration_manager/src/: exploration_node.cpp  global_plan_server.cpp  global_plan_server_node.cpp  ms_exploration_fsm.cpp  ms_exploration_manager.cpp
exploration_planner/planner/exploration_manager/worlds/: smallroom1.world
exploration_planner/planner/exploration_manager/worlds/smallroom/: model.config  model.sdf
exploration_planner/planner/exploration_msgs/: CMakeLists.txt  package.xml
exploration_planner/planner/exploration_msgs/action/: PlanCOP.action
exploration_planner/planner/plan_env/include/plan_env/: edt_environment.h  map_ros.h  obj_predictor.h  raycast.h  sdf_map.h
exploration_planner/planner/plan_env/src/: edt_environment.cpp  map_ros.cpp  obj_predictor.cpp  raycast.cpp  sdf_map.cpp
exploration_planner/planner/plan_manage/: CMakeLists.txt
exploration_planner/planner/plan_manage/include/plan_manage/: kino_acc_astar.hpp  kino_utils.hpp  kino_yaw.hpp  planner_manager.h  poly_opt.h  (+2 more)
exploration_planner/planner/plan_manage/src/: planner_manager.cpp  poly_opt.cpp
generic_sloam/: LICENSE.txt  README.md
generic_sloam/cloud_undistort/: CMakeLists.txt  nodelet_plugins.xml  package.xml
generic_sloam/cloud_undistort/launch/: cloud_undistort.launch
generic_sloam/cloud_undistort/src/: cloud_undistort_node.cpp  conversion.hpp  definitions.hpp  eigen_checks.hpp
generic_sloam/cloud_undistort/src/sv/: geomtypes.hpp  math.hpp  pcl_utils.hpp  transformation.hpp  types.hpp
generic_sloam/docker/: SLOAMDockerfile  run_sloam_container_yuezhan.sh  run_sloam_node_yuezhan.sh
generic_sloam/loop_closure/: CMakeLists.txt  package.xml
generic_sloam/loop_closure/include/loop_closure/: loopClosureServer.h  measurement_processing.hpp
generic_sloam/loop_closure/launch/: loop_closure_node.launch
generic_sloam/loop_closure/src/: loopClosureServer.cpp  loopClosureServerNode.cpp  measurement_processing.cpp
generic_sloam/scan2shape_launch/launch/: real_robot_process_cloud_node.launch
generic_sloam/scan2shape_launch/rviz/: default.rviz
generic_sloam/scan2shape_launch/script/: add_noise_to_ground_truth_odom.py  assignment.py  cuboid_utils.py  loop_closure_submap_node.py  object_tracker.py  object_tracker_utils.py  process_cloud_node.py  segmentator.py  sklearn_matching_utils.py  utils.py
generic_sloam/sloam/: CMakeLists.txt  package.xml
generic_sloam/sloam/include/core/: activeSlamInputNode.h  cubeMapManager.h  mapManager.h  sloam.h  sloamNode.h
generic_sloam/sloam/include/factorgraph/: cubeFactor.h  cylinderFactor.h  graph.h  graphWrapper.h
generic_sloam/sloam/include/helpers/: definitions.h  utils.h
generic_sloam/sloam/include/objects/: cube.h  cylinder.h  plane.h  semanticObject.h
generic_sloam/sloam/include/segmentation/: inference.h  trellis.h
generic_sloam/sloam/include/urquhart/: cloud_utils.hpp  descriptor.hpp  distance.hpp  loopclosure.hpp  matching.hpp  observation.hpp  polygon.hpp  tree.hpp
generic_sloam/sloam/include/viz/: vizTools.h
generic_sloam/sloam/launch/: active_slam.launch
generic_sloam/sloam/launch/rviz/: sloam.rviz  sloam_active_slam.rviz
generic_sloam/sloam/params/: sloam.yaml  sloam_active_slam_real_robot.yaml  sloam_active_slam_sim.yaml
generic_sloam/sloam/resource/: chair_input.stl
generic_sloam/sloam/src/core/: activeSlamInputNode.cpp  cubeMapManager.cpp  inputNode.cpp  mapManager.cpp  sloam.cpp  sloamNode.cpp  sloamNodelet.cpp
generic_sloam/sloam/src/factorgraph/: cubeFactor.cpp  cylinderFactor.cpp  graph.cpp  graphWrapper.cpp
generic_sloam/sloam/src/objects/: cube.cpp  cylinder.cpp  plane.cpp
generic_sloam/sloam/src/segmentation/: inference.cpp  trellis.cpp
generic_sloam/sloam/src/tests/: core_test.cpp  cube_factor_test.cpp  cylinder_factor_test.cpp  cylinder_test.cpp  loop_closure_test.cpp  plane_test.cpp
generic_sloam/sloam/src/urquhart/: cloud_utils.cpp  descriptor.cpp  loopclosure.cpp  matching.cpp  observation.cpp  tree.cpp
generic_sloam/sloam/src/viz/: vizTools.cpp
generic_sloam/sloam_msgs/: CMakeLists.txt  package.xml
semantic_detection/: README.md
semantic_detection/rgb_sem_segmentation/: CMakeLists.txt  package.xml
semantic_detection/rgb_sem_segmentation/launch/: rgb_segmentation_real_robot.launch  rgb_segmentation_sim.launch
semantic_detection/rgb_sem_segmentation/src/: detect.py
semantic_detection/sem_detection_msgs/: CMakeLists.txt  package.xml
