<?xml version="1.0"?>
<package format="2">
  <name>sloam</name>
  <version>0.0.0</version>
  <description>The SLOAM package</description>

  <author email="guilhermenardari@gmail.com">Guilherme Nardari</author>
  <author email="liuxu@seas.upenn.edu">Xu Liu</author>
  <maintainer email="liuxu@seas.upenn.edu">Xu Liu</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>roscpp</depend>
  <depend>Eigen</depend>
  <depend>glog</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>sloam_msgs</depend>
  <depend>nodelet</depend>
  <depend>ceres</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>loop_closure</depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
  </export>
</package>