<?xml version="1.0"?>
<package format="2">
  <name>exploration_manager</name>
  <version>0.0.0</version>
  <description>The ms_planner package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="yztao@seas.upenn.edu">Yuezhan Tao</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>plan_env</build_depend>
  <build_depend>sloam_msgs</build_depend>
  <build_depend>path_searching</build_depend>
  <build_depend>active_perception</build_depend>
  <build_depend>traj_utils</build_depend>
  <build_depend>plan_manage</build_depend>
  <build_depend>kr_mav_msgs</build_depend>
  <build_depend>decomp_ros_utils</build_depend>
  <build_depend>exploration_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>gcopter</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>plan_env</exec_depend>
  <exec_depend>sloam_msgs</exec_depend>
  <exec_depend>path_searching</exec_depend>
  <exec_depend>active_perception</exec_depend>
  <exec_depend>traj_utils</exec_depend>
  <exec_depend>plan_manage</exec_depend>
  <exec_depend>kr_mav_msgs</exec_depend>
  <exec_depend>exploration_msgs</exec_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>gcopter</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
